--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "openweather-apis": "^4.0.0",
+    "querystring": "^0.2.0",
+    "querystring-es3": "^0.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-svg-gauge": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
