--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "querystring": "^0.2.0",
     "querystring-es3": "^0.2.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-svg-gauge": "^1.0.10"
